# MasterCpp

./: .gitignore  README.md
10_seminar/: 04.01.cpp  04.02.cpp  04.03.cpp  04.04.cpp
11_seminar/: 04.05.cpp  04.06.cpp
12_seminar/: 04.07.cpp  04.08.cpp  04.09.cpp  04.10.cpp
13_seminar/: 05.01.cpp  05.02.cpp  05.03.cpp  05.04.cpp
14_seminar/06.01/: main.cpp  rational.cpp  rational.hpp
14_seminar/06.02/: build.txt  main.cpp  numeric.pcm  rational_h.cxx  rational_s.cxx
14_seminar/06.03/: results.md
15_seminar/: 05.05.cpp
15_seminar/06.01/: Rational.cpp  Rational.hpp  main.cpp
15_seminar/06.05/: CMakeLists.txt  main.cpp
15_seminar/06.05/include/: library.hpp
15_seminar/06.05/lib_v1/: CMakeLists.txt  lib_v1.cpp
15_seminar/06.05/lib_v2/: CMakeLists.txt  lib_v2.cpp
16_seminar/: 07.01.cpp  07.02.cpp  07.03.cpp
17_seminar/: 07.04.cpp  07.05.cpp
2_seminar/: 02.01.cpp  02.02.cpp  02.03.cpp  02.04.cpp  02.05.cpp
3_seminar/: 02.06.cpp  02.07.cpp  02.08.cpp
5_seminar/: 02.09.cpp  02.10.cpp  03.01.cpp  03.02.cpp  03.03.cpp
6_seminar/: 03.04.cpp  03.05.cpp  03.06.cpp
7_seminar/: 03.07.cpp
8_seminar/: 03.09.cpp  03.10.cpp
